src/test/deca/context/valid/class/4_declPlusieurFiled.deca
/* Description:
     tester class qui possede de plusieur field

    Historique:
      cree le 08/01/2020
*/

   class A {
   int x,y;



   }
