src/test/deca/context/invalid/class/18_this3.deca
/* Description:
    test invalide en utilisant this



    Historique:
      cree le 18/01/2020
*/

   class A {
    int y;

   }
   {
    this.y;
    }
